--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@remix-run/serve": "^2.15.2",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.2",
